--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
   <div id="app"></div>
   <script>
     window.$docsify = {
+      logo: '/images/icon.png',
       el: "#app",
-      repo: 'https://github.com/bryantson/OpensourceDotComDemos/tree/master/DocsifyDemo',
+      repo: 'https://github.com/HENRY-JERRY/DocifyDemo',
       loadSidebar: true
     }
   </script>
