updated side bar

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <div id="app"></div>
   <script>
     window.$docsify = {
-      logo: './images/logo.png',
+      logo: '/images/logo.png',
       el: "#app",
       repo: 'https://github.com/HENRY-JERRY/DocifyDemo',
       loadSidebar: true
